# Qt-learning

./: README.md
Qt-learning/: CMakeLists.txt  Qt-learning.pro  main.cpp  mainwindow.cpp  mainwindow.h
Qt-learning/qtwidget/: qtwidget.pro
Qt-learning/src/: CMakeLists.txt
Qt-learning/src/compile1/: CMakeLists.txt  compile1.pro
Qt-learning/src/compile1/cmake/: CMakeLists.txt  test.cpp  test.h
Qt-learning/src/compile1/qmake/: CMakeLists.txt  main.cpp  qmake.pro  qmakedoc.cpp  qmakedoc.h
Qt-learning/src/compile1/qmake/pri/: qmakelearn.pri
Qt-learning/src/qtwidget/: CMakeLists.txt
